Change Log
==========


2019-08-12 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* py3 and idurl fixes
* must try to ping supplier first before fire him to make sure identity cached
* fixes in api interface method /supplier/switch/v1
* checking situation when username in identity changed intentionaly
* try to cache other sources when identitycache failed



2019-08-09 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* refresh customer family and republish DHT info after customer identity rotated (#373)
* reconnect proxy_receiver from the router if found "connection failed" transfers
* process "identity-url-changed" event in service_data_motion() and service_customer()
* IDURL and key_id fixes for identity rotate
* process identity-rotate event in service_keys_storage() (#372)



2019-08-02 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* update key_id in backup index after identity rotated
* added keys_synchronizer() automat
* rename local key when owner's identity was rotated



2019-07-21 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bump twisted==19.2.1
* solved regression tests issues with aiohttp call to process/health/v1
* added /file/exists/v1 REST API method



2019-07-12 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* some changes in service_p2p_hookups() and p2p_connector()
* make sure identity propagate is working correctly



2019-07-12 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* idurl fixes in contactsdb and api  (#363)
* able to read networks.json file from metadata folder if it exists
* improved index_synchronizer() automat



2019-07-11 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* check if key file already exists in the catalog
* py3 fix in contactsdb
* idurl fix in get_contact_identity()
* idurl bug fix in service_customer_family()


