@@ -26,6 +26,8 @@ bitdust.egg-info/
 dist/
 tests/data/test_*
 devops/nodes.txt
+devops/development_net.txt
+devops/main_net.txt
 
 # IDE specific
 .idea
